chore: Initial fix for emotion 10 styles in various pages

--- a/apps/browser-extension/src/content.css
+++ b/apps/browser-extension/src/content.css
@@ -5,8 +5,8 @@
   height: 100vh;
   top: 0;
   pointer-events: none;
+}
 
-  > div {
-    pointer-events: none;
-  }
+#scrapper_gate_content_root > div {
+  pointer-events: none;
 }
